kubernetes/k3s-01/workloads/minio/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-console
  namespace: minio
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ui.minio.47fc5c.com`)
      kind: Rule
      middlewares:
        - namespace: minio
          name: minio-ipallowlist
      services:
        - name: minio-console
          kind: Service
          port: 9090
          scheme: http
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
  tls:
    secretName: minio-console-certificate
